--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,22 @@
 	display:block;
 }
 
-.characterName, .characterHealth {
-	color: red;
+.characterName, .characterHealth, p, h1, .title {
+	color: white;
 	width:100%;
 	margin: 0 auto;
 }
+
+body{
+    background-image: url('http://www.tokkoro.com/picsup/2997599-star-wars-death-star-at-at-space-night-sky___mixed-wallpapers.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding:0;
+    margin:0;
+}
+
+#fightBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
