--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,11 @@
 .characterName, .characterHealth, p, h1, .title {
 	color: white;
 	width:100%;
-	margin: 0 auto;
+    margin: auto;
 }
 
 body{
-    background-image: url('http://www.tokkoro.com/picsup/2997599-star-wars-death-star-at-at-space-night-sky___mixed-wallpapers.jpg');
+    background-image: url('../images/swbg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding:0;
